# farthest-sampler

./: .gitignore  Cargo.toml  README.md  pyproject.toml
benches/: bench.rs
farthest-sampler-python/: Cargo.toml
farthest-sampler-python/src/: lib.rs
src/: capi.rs  lib.rs  python.rs  simple.rs  voronoi.rs
voronoi-fps-python/: Cargo.toml
voronoi-fps-python/src/: lib.rs
