[package]
name = "farthest-sampler"
version = "0.1.0"
authors = ["Luthaf <luthaf@luthaf.fr>"]
edition = "2018"

[workspace]
members = ["farthest-sampler-python"]

[[bench]]
name = "bench"
harness = false

[dependencies]
ndarray = {version = "0.14", features = ["rayon"]}
soa_derive = "0.10"
rayon = "1"
thread_local = "1"
time-graph = {version = "0.1.1", optional = true}

[dev-dependencies]
criterion = {version = "0.3", features = ["html_reports"]}
ndarray-npy = "0.7"
