[package]
name = "farthest-sampler-python"
version = "0.1.0"
authors = ["Luthaf <luthaf@luthaf.fr>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
bench = false

[dependencies]
farthest-sampler = {path = "../"}
ndarray = "0.14"
numpy = "0.13"

[dependencies.pyo3]
version = "0.13"
features = ["extension-module"]
